Basic implementation of remove song from playback queue