@@ -9,7 +9,6 @@ import javafx.util.Duration;
 import javax.sound.sampled.*;
 import java.io.FileNotFoundException;
 import java.util.*;
-import java.util.concurrent.LinkedBlockingDeque;
 
 /**
  * Class to manage the the MusicPlayer.
@@ -18,7 +17,7 @@ public class MusicPlayerManager {
 
     private IMusicPlayer m_musicPlayer;
 
-    private Deque<Song> m_playingQueue;
+    private List<Song> m_playingQueue;
 
     private List<Song> m_songHistory;
 
@@ -54,7 +53,7 @@ public class MusicPlayerManager {
     public MusicPlayerManager(DatabaseManager databaseManager) {
         m_databaseManager = databaseManager;
 
-        m_playingQueue = new LinkedBlockingDeque<>();
+        m_playingQueue = new ArrayList<>();
         reterievePlaybackQueueFromDB();
 
         m_songHistory = new ArrayList<>();
@@ -81,7 +80,8 @@ public class MusicPlayerManager {
         } else if (!m_playingQueue.isEmpty()){
             m_historyIndex = m_songHistory.size() - 1;
             m_isPlayingOnHistory = false;
-            Song nextSong = m_playingQueue.poll();
+            Song nextSong = m_playingQueue.get(0);
+            m_playingQueue.remove(0);
             playSongRightNow(nextSong);
 
         } else if (isThereNextSongOnPlaylist()) {
@@ -152,7 +152,7 @@ public class MusicPlayerManager {
      * @param songToPlace The song to place in the queue
      */
     public void placeSongAtStartOfQueue(Song songToPlace) {
-        m_playingQueue.addFirst(songToPlace);
+        m_playingQueue.add(0, songToPlace);
         m_databaseManager.addToPlaybackQueueHead(songToPlace.getM_file().getAbsolutePath());
         if (isNoSongPlayingOrNext()){
             playNextSong();
@@ -529,7 +529,7 @@ public class MusicPlayerManager {
             // Nothing in the DB.
             return;
         }
-        Deque<Song> queueFromDB = new LinkedBlockingDeque<>();
+        List<Song> queueFromDB = new ArrayList<>();
         for (int i = 0; i < queuedSongs.size(); i++) {
             Song song = new Song(queuedSongs.get(i));
             queueFromDB.add(song);
@@ -648,7 +648,7 @@ public class MusicPlayerManager {
             return m_songHistory.get(m_historyIndex + 1);
         }
         if (!m_playingQueue.isEmpty()) {
-            return m_playingQueue.getFirst();
+            return m_playingQueue.get(0);
         } else if (isThereNextSongOnPlaylist()){
             return m_currentPlayList.getNextSong();
         }
@@ -742,5 +742,16 @@ public class MusicPlayerManager {
             return m_currentPlayList.getM_currentSongIndex();
         }
         return -1;
+    }
+
+    /**
+     * Function to remove a song from the playback queue based on the index of its location.
+     * @param index
+     */
+    public void removeSongFromPlaybackQueue(int index){
+        if (m_playingQueue.size() > index) {
+            m_playingQueue.remove(index);
+        }
+        notifyQueingObserver();
     }
 }
